--- a/client/react/src/index.css
+++ b/client/react/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url('/public/inteltion-bg.jpg'); /* Set the path to your image in the public folder */
+  background-image: url('/public/inteltion-bg.png'); /* Set the path to your image in the public folder */
   background-size: cover;
   background-position: center;
 }
